# IDRAC-Set-up

./: .dockerignore  .env.example  .gitignore  CLOUDFLARE_TUNNEL.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: database.rs  handlers.rs  idrac.rs  main.rs
static/: dashboard.html  login.html  register.html
