[package]
name = "idrac-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
